# sda-mcp

./: .gitignore  Makefile  README.md  client.py  main.py  mcp_instance.py  pyproject.toml  requirements.txt  setup.sh
agents/: base_agent.py  router.py
agents/appliance/: tools.py
agents/authentication/: tools.py
agents/connectivity/: tools.py
agents/devices/: tools.py
agents/ecosystem/: tools.py
agents/events/: tools.py
agents/sda/: tools.py
agents/system/: tools.py
agents/task/: tools.py
apis/devices/: __init__.py  tools.py
apis/sda/: __init__.py  tools.py
apis/task/: tools.py
sda/: __init__.py  tools.py
task/: __init__.py  tools.py
